set site layout

--- a/web/app/themes/yellowstudio/resources/style.css
+++ b/web/app/themes/yellowstudio/resources/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name:         Yellow Studio
-Theme URI:          https://besrabasant.github.io
-Description:        A Custom Theme for Yellow Studio
+Theme URI:          https://besrabasant,github.io
+Description:        A Custom theme for Yellow Studio.
 Version:            1.0.0
 Author:             Basant Besra
-Author URI:         https://besrabasant.github.io
+Author URI:         https://besrabasant,github.io
 Text Domain:        sage
 
 License:            MIT License
