update webpack mix

--- a/web/app/themes/yellowstudio/resources/assets/sass/app.scss
+++ b/web/app/themes/yellowstudio/resources/assets/sass/app.scss
@@ -61,5 +61,5 @@
  * @import "utilities/skew-transforms";
  */
 
-@import "_variables";
-@import "_styles";
+@import "variables";
+@import "styles";
